[tool.poetry]
name = "rv_helper"
version = "0.1.0"
description = "A helper package for rapid visualization"
authors = ["Morris Chan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
